# AI-Habit-Mentor

./: .env.example  .gitattributes  .gitignore  Dockerfile  Makefile  Procfile  README.md  alembic.ini  archit.md  codecov.yml  done.md  flow.md  main.py  mypy.ini  pyproject.toml  render.yaml  requirements.txt  ruff.toml  rules.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 83482c15107f_initial_migration.py
app/api/: endpoints.py  schemas.py
app/core/: config.py
app/database/: models.py  repository.py  session.py
app/middleware/: __init__.py  rate_limit.py
app/services/: anonymizer.py
app/services/ai/: base.py  gemini.py
src/templates/: index.html
tests/: conftest.py  test_api.py  test_main.py
