[project]
name = "neuro-adaptive-ai-habit-mentor"
version = "1.0.0"
description = "Backend for Telegram Mini App — AI habit tracking with vector memory and FZ-152 compliance"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic[email]>=2.0",
    "pydantic-settings",
    "asyncpg",
    "sqlalchemy[ext_asyncio]",
    "httpx",
    "python-dotenv",
    "pgvector",
    "dnspython",
    "aiofiles",
    "alembic",
    "tenacity",
    "slowapi",
    "prometheus-fastapi-instrumentator",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
    "mypy",
    "black",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::RuntimeWarning",
]

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.git
  | \.venv
  | __pycache__
  | \.mypy_cache
  | \.pytest_cache
  | alembic
)/
'''

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "alembic/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]